--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,10 @@ h1, h2, h3, h4, h5 {
     font-size: 18px;
     text-decoration: none;
 }
+/* 
+.project.hide {
+    display: none;
+} */
 
 .project:hover {
     cursor: pointer;
