--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ h1, h2, h3, h4, h5 {
     text-align: center;
     position: relative;
     overflow: hidden;
+    transition: 0.3s ease-in-out;
 }
 
 .description {
@@ -113,6 +114,8 @@ h1, h2, h3, h4, h5 {
 
 .project:hover {
     cursor: pointer;
+    transform: scale(1.05);
+    box-shadow: 0px 7px 8px -3px #4362fd;
 }
 
 .project:hover .description{
