--- a/projects/10 - collapsed content/styles.css
+++ b/projects/10 - collapsed content/styles.css
@@ -12,10 +12,15 @@ body {
     height: 100vh;
     overflow: hidden;
     background-color: rgb(240, 240, 240);
+    padding: 10px;
 }
 
 .content {
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .box {
@@ -26,6 +31,7 @@ body {
     border: 2px solid rgb(179, 179, 179);
     border-radius: 10px;
     width: 600px;
+    max-width: 90%;
     margin: 20px 5px;
     position: relative;
     overflow: hidden;
